--- a/src/app/background/background.html
+++ b/src/app/background/background.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <script src="background.js" type="module"></script>
+    <title></title>
 </head>
 <body>
 </body>
