--- a/src/app/option/option.css
+++ b/src/app/option/option.css
@@ -1,7 +1,43 @@
 html,
-body {
+body,
+.flex-container {
     height: 100%;
     margin: 0;
     padding: 0;
-    display: block;
+    overflow: hidden;
+}
+
+.flex-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-content: stretch;
+    align-items: flex-start;
+}
+
+.flex-item-stretch-flex-grow-0 {
+    flex: 0 1 auto;
+    align-self: stretch;
+}
+
+.flex-item-stretch-flex-grow-1 {
+    flex: 1 1 auto;
+    align-self: stretch;
+}
+
+.wide-textarea {
+    width: 100%;
+    height: 100%;
+    white-space: pre;
+}
+
+* {
+    background: black;
+    color: white;
+    outline: none;
+}
+
+.inline-block {
+    display: inline-block;
 }
