--- a/src/app/option/option.html
+++ b/src/app/option/option.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Open HTML option</title>
+    <title>Simple Screenshot Option</title>
     <link rel="stylesheet" href="option.css">
 </head>
 <body class="flex-container">
