--- a/src/app/option/option.html
+++ b/src/app/option/option.html
@@ -13,6 +13,9 @@
     <div class="inline-block">
         <button id="save">Save</button>
     </div>
+    <div class="inline-block">
+        <button id="makeBookmarks">Make Bookmarks</button>
+    </div>
 </div>
 <div class="flex-item-stretch-flex-grow-1">
     <label for="option"></label>
