--- a/src/app/bookmark/simpleScreenshotLevel4.html
+++ b/src/app/bookmark/simpleScreenshotLevel4.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+    <link rel="stylesheet" href="styles.css">
     <script src="simpleScreenshotLevel4.js" type="module"></script>
 </head>
 <body>
+<div class="loader">Loading...</div>
 </body>
 </html>
