--- a/src/app/background/background.html
+++ b/src/app/background/background.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="UZIP.js"></script>
+    <script src="pako.es5.min.js"></script>
+    <script src="UPNG.js"></script>
     <script src="background.js" type="module"></script>
     <title></title>
 </head>
